fixed issue where imgs were rendering too large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,16 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100%;
+}
+
 h1 {
     color: white;
+}
+
+footer {
+    position: sticky;
 }
 
 /* Jumbotron styling */
@@ -23,9 +31,15 @@ h1 {
 .dynamicCard {
     width: 170px;
     height: auto;
-    margin: 0 10px 10px 0;
+    margin: 0 10px 40px 0;
     
 }
+
+.dynamicCard > img {
+    width: 50px;
+    height: auto;
+}
+
 .marginTop {
     margin-top: 20px;    
 }
@@ -37,6 +51,3 @@ h1 {
 .uvNum {
     border: none;
 }
-
-/* Media Query */
-@media 
